--- a/emi.html
+++ b/emi.html
@@ -48,7 +48,7 @@
 
         <div class="container border">
             <div class="bg-white">
-                <div class="row ">
+                <div class="row mr-0">
                     <div class="col-sm-12 col-lg-7 bg-white">
 
                         <p><span class="badge badge-primary p-2 mt-3">Loan Amount</span></p>
