--- a/emi.html
+++ b/emi.html
@@ -46,95 +46,100 @@
             <p> Calculate your Home Loan EMI & Total Interest Due</p>
         </div>
 
-        <div class="container border">
-            <div class="bg-white">
-                <div class="row mr-0">
-                    <div class="col-sm-12 col-lg-7 bg-white">
+                <div class="row bg-white border">
+            <div class="col-sm-12 col-lg-7 bg-white">
 
-                        <p><span class="badge badge-primary p-2 mt-3">Loan Amount</span></p>
-                        <div class="input-group mb-3 w-50">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">Rs.</span>
-                            </div>
-                            <input type="text" class="form-control" id="home_price" aria-label="Amount (to the nearest rupee)">
-                            <div class="input-group-append">
-                                <span class="input-group-text">.00</span>
-                            </div>
-                        </div>
-
-                        <hr class="my-4">
-
-                        <p><span class="badge badge-primary p-2">Rate of Interest<span class="badge badge-light ml-2"><output name="sliderInput1" id="sliderVal1">8</output>%</span></span></p>
-                        <div class="">
-                            <span class="min">0.1</span>
-                            <input type="range" name="sliderInput1" id="interest" class="custom-range w-50" min="0.1" max="15" step="0.1" value="8" oninput="sliderVal1.value = interest.value">
-                            <span class="max">15</span>
-                        </div>
-
-
-                        <hr class="my-4">
-
-                        <p><span class="badge badge-primary p-2">Loan Tenure<span class="badge badge-light ml-2"><output name="sliderInput2" id="sliderVal2">5</output> Years</span></span></p>
-                        <div class="">
-                            <span class="min">1</span>
-                            <input type="range" name="sliderInput2" id="emi_month" class="custom-range w-50" min="1" max="30" value="5" oninput="sliderVal2.value = emi_month.value">
-                            <span class="max">30</span>
-                        </div>
-
-
-                        <hr class="my-4">
-
-                        <input class="btn btn-danger float-left mb-3" onclick="EmiCalculator();" type="submit" value="CALCULATE"> <br>
-
+                <p><span class="badge badge-primary p-2 mt-3">Loan Amount</span></p>
+                <div class="input-group mb-3 w-50">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Rs.</span>
                     </div>
-
-                    <div class="col-sm-12 col-lg-5 ml-auto uig text-center">
-
-                        <div class="p-2 mb-2 bg-white text-dark border-top">
-                            <h4 style="color:#2572b1">EMI RESULT</h4>
-                        </div>
-
-                        <h5 class="text-white my-3">Equated Monthly Instalment</h5>
-                        <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">Rs.</span>
-                            </div>
-                            <input type="text" class="form-control" id="emi" readonly="true" aria-label="Amount (to the nearest rupee)">
-                            <div class="input-group-append">
-                                <span class="input-group-text">.00</span>
-                            </div>
-                        </div>
-
-                        <hr class="my-4">
-
-                        <h5 class="text-white my-3">Interest Amount</h5>
-                        <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">Rs.</span>
-                            </div>
-                            <input type="text" class="form-control" id="interestamt" readonly="true" aria-label="Amount (to the nearest rupee)">
-                            <div class="input-group-append">
-                                <span class="input-group-text">.00</span>
-                            </div>
-                        </div>
-
-                        <hr class="my-4">
-
-                        <h5 class="text-white my-3">Total Amount Payable</h5>
-                        <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">Rs.</span>
-                            </div>
-                            <input type="text" class="form-control" id="totalamtpay" readonly="true" aria-label="Amount (to the nearest rupee)">
-                            <div class="input-group-append">
-                                <span class="input-group-text">.00</span>
-                            </div>
-                        </div>
-
+                    <input type="text" class="form-control" id="home_price" aria-label="Amount (to the nearest rupee)">
+                    <div class="input-group-append">
+                        <span class="input-group-text">.00</span>
                     </div>
                 </div>
+
+                <hr class="my-4">
+
+                <p><span class="badge badge-primary p-2">Rate of Interest<span class="badge badge-light ml-2"><output
+                                name="sliderInput1" id="sliderVal1">8</output>%</span></span></p>
+                <div class="">
+                    <span class="min">0.1</span>
+                    <input type="range" name="sliderInput1" id="interest" class="custom-range w-50" min="0.1" max="15"
+                        step="0.1" value="8" oninput="sliderVal1.value = interest.value">
+                    <span class="max">15</span>
+                </div>
+
+
+                <hr class="my-4">
+
+                <p><span class="badge badge-primary p-2">Loan Tenure<span class="badge badge-light ml-2"><output
+                                name="sliderInput2" id="sliderVal2">5</output> Years</span></span></p>
+                <div class="">
+                    <span class="min">1</span>
+                    <input type="range" name="sliderInput2" id="emi_month" class="custom-range w-50" min="1" max="30"
+                        value="5" oninput="sliderVal2.value = emi_month.value">
+                    <span class="max">30</span>
+                </div>
+
+
+                <hr class="my-4">
+
+                <input class="btn btn-danger float-left mb-3" onclick="EmiCalculator();" type="submit"
+                    value="CALCULATE"> <br>
+
+            </div>
+
+            <div class="col-sm-12 col-lg-5 ml-auto uig text-center">
+
+                <div class="p-2 mb-2 bg-white text-dark border-top">
+                    <h4 style="color:#2572b1">EMI RESULT</h4>
+                </div>
+
+                <h5 class="text-white my-3">Equated Monthly Instalment</h5>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Rs.</span>
+                    </div>
+                    <input type="text" class="form-control" id="emi" readonly="true"
+                        aria-label="Amount (to the nearest rupee)">
+                    <div class="input-group-append">
+                        <span class="input-group-text">.00</span>
+                    </div>
+                </div>
+
+                <hr class="my-4">
+
+                <h5 class="text-white my-3">Interest Amount</h5>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Rs.</span>
+                    </div>
+                    <input type="text" class="form-control" id="interestamt" readonly="true"
+                        aria-label="Amount (to the nearest rupee)">
+                    <div class="input-group-append">
+                        <span class="input-group-text">.00</span>
+                    </div>
+                </div>
+
+                <hr class="my-4">
+
+                <h5 class="text-white my-3">Total Amount Payable</h5>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Rs.</span>
+                    </div>
+                    <input type="text" class="form-control" id="totalamtpay" readonly="true"
+                        aria-label="Amount (to the nearest rupee)">
+                    <div class="input-group-append">
+                        <span class="input-group-text">.00</span>
+                    </div>
+                </div>
+
             </div>
         </div>
+
     </div>
 
     <div class="p-3 bg-secondary text-white mt-5">
