--- a/emi.html
+++ b/emi.html
@@ -46,7 +46,7 @@
             <p> Calculate your Home Loan EMI & Total Interest Due</p>
         </div>
 
-                <div class="row bg-white border">
+        <div class="row bg-white border">
             <div class="col-sm-12 col-lg-7 bg-white">
 
                 <p><span class="badge badge-primary p-2 mt-3">Loan Amount</span></p>
@@ -139,19 +139,17 @@
 
             </div>
         </div>
-
     </div>
 
     <div class="p-3 bg-secondary text-white mt-5">
         <div class="row">
-            <div class="col-md-6 col-sm-12 pl-5"> <h6 class=""> © 2021 Lorem, Ipsum.</h6></div>
+            <div class="col-md-6 col-sm-12 pl-5">
+                <h6 class=""> © 2021 Lorem, Ipsum.</h6>
+            </div>
             <div class="col-md-6 col-sm-12 px-5">
-                <a href="" class="text-light pr-4 small"
-                    target="_self">Lorem, ipsum.</a>
-                <a href="" class="text-light pr-4 small"
-                    target="_self">Lorem, ipsum.</a>
-                <a href="" class="text-light pr-4 small"
-                    target="_self">Lorem, ipsum.</a>
+                <a href="" class="text-light pr-4 small" target="_self">Lorem, ipsum.</a>
+                <a href="" class="text-light pr-4 small" target="_self">Lorem, ipsum.</a>
+                <a href="" class="text-light pr-4 small" target="_self">Lorem, ipsum.</a>
             </div>
         </div>
     </div>
@@ -187,3 +185,4 @@
 </body>
 
 </html>
+
