--- a/emi.html
+++ b/emi.html
@@ -46,7 +46,7 @@
             <p> Calculate your Home Loan EMI & Total Interest Due</p>
         </div>
 
-        <div class="row bg-white border border-danger">
+        <div class="row bg-white border">
             <div class="col-sm-12 col-lg-7 bg-white">
 
                 <p><span class="badge badge-primary p-2 mt-3">Loan Amount</span></p>
