--- a/emi.html
+++ b/emi.html
@@ -50,13 +50,15 @@
             <div class="col-sm-12 col-lg-7 bg-white">
 
                 <p><span class="badge badge-primary p-2 mt-3">Loan Amount</span></p>
-                <div class="input-group mb-3 w-50">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">Rs.</span>
-                    </div>
-                    <input type="text" class="form-control" id="home_price" aria-label="Amount (to the nearest rupee)">
-                    <div class="input-group-append">
-                        <span class="input-group-text">.00</span>
+                <div class="mr-md-5">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">Rs.</span>
+                        </div>
+                        <input type="text" class="form-control" id="home_price" aria-label="Amount (to the nearest rupee)">
+                        <div class="input-group-append mr-md-5">
+                            <span class="input-group-text  mr-md-5">.00</span>
+                        </div>
                     </div>
                 </div>
 
